# Patchrail

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.ja.md  README.md  pyproject.toml
docs/: architecture.md  backlog.md  local-testing.md  mvp.md
patchrail/: __init__.py
patchrail/approval/: __init__.py  fallback_service.py  service.py
patchrail/artifacts/: __init__.py  service.py
patchrail/cli/: __init__.py  __main__.py  main.py  render.py  shell.py
patchrail/core/: __init__.py  assignment.py  exceptions.py  hooks.py  ids.py  preflight.py  service.py  state_machine.py
patchrail/models/: __init__.py  entities.py  roles.py
patchrail/providers/: __init__.py  executor_api.py  http.py  role_generation.py
patchrail/review/: __init__.py  service.py
patchrail/runners/: __init__.py  api.py  base.py  local_harness.py  stub.py  subscription.py
patchrail/storage/: __init__.py  config_store.py  filesystem.py
patchrail/workflows/: __init__.py  base.py  langgraph_backend.py  local.py
scripts/: install_cli.sh  local_smoke_test.sh
tests/: test_cli_flow.py  test_install_script.py  test_local_workflow_engine.py  test_project_metadata.py  test_role_policy.py  test_subscription_runner.py  test_workflow_backends.py
