[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patchrail"
version = "0.1.0"
description = "Local-first supervised coding-agent control plane"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Patchrail" }]
dependencies = []

[project.scripts]
patchrail = "patchrail.cli.main:run"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["patchrail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
